#11 fix: revive the keyword leg of hybrid search and honour minScore
The keyword leg contributed no ranked chunk to any query, so RRF fusion
collapsed to the vector leg and "hybrid" search was vector-only in
practice (keyword_leg_hit_rate measured 0.0000). There were two
independent causes; fixing either alone changes nothing.

1. The query matched nothing. HybridSearchService queried
   cin_ingestProperties.contentLake_extractedText, a key no ingester ever
   wrote. NodeSyncService now mirrors extracted text into that property,
   and the leg queries sys_fulltext, hxpr's analysed index over the ingest
   properties. Three constraints, each established by probing a live
   index: sys_fulltextBinary is written by the sync but is not exposed to
   HXQL, so it cannot be queried however it is spelled; the ingest
   property IS queryable with LIKE, but its index truncates at 256
   characters, so a LIKE-based leg silently only ever sees a document's
   opening lines; sys_fulltext has no such limit, matches
   case-insensitively, and keeps sentinel identifiers such as CHG-105402
   as single tokens.

2. The matched documents yielded no chunks. A plain HXQL query returns
   documents without them: chunk text lives in an embeddings.parquet blob
   that only /api/query/embeddings decodes. The old code read
   getSysembedEmbeddings(), found it null on every document, and skipped
   them all. The leg now passes the keyword HXQL as that endpoint's
   filter and re-scores the returned chunks by BM25 TF, discarding the
   endpoint's vector ordering, which carries no keyword signal. The query
   embedding computed for the vector leg is reused rather than
   recomputed, so the fix costs one hxpr round trip and no extra
   inference.

Separately, minScore was discarded on the default RAG path in three
places. HxprDocumentRetriever omitted it from the hybrid request
entirely, and since rag.use-hybrid-search defaults to true that dropped
it on every prompt. HybridSearchService and Rag